Update index.html image and use ejekell extension

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,10 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="yuinchien.com/">yuin chien</a>
-    <a class="extra" href="/">home</a>
+    <a href="/">yuin chien</a>
+    <a class="extra" href="/process">Process</a>
+	<a class="extra" href="/ideas">Ideas</a>
+	<a class="extra" href="/context">Context</a>
   </div>
   
   {{ content }}
