--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@ var WRInitTime=(new Date()).getTime();
   {{ content }}
   
   <div class="footer">
+	{% render_time %}
     <div class="contact">
       <p>
 	    <a href="http://www.flickr.com/photos/yuinchien">photo</a>
