Update new font in css

--- a/css/screen.css
+++ b/css/screen.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
   background-color: white;
-  font-family: "adelle-1","adelle-2";
+  font-family: "gesta-1","gesta-2",sans-serif;
 /*
   font-family: "gesta-1","gesta-2",sans-serif;
 */  *font-size: small;
