change logo font

--- a/css/screen.css
+++ b/css/screen.css
@@ -18,7 +18,7 @@ html, body {
 body {
   background-color: white;
   font-family: "gesta-1","gesta-2",sans-serif;
-  font-size: small;
+  font-size: 1em;
   text-align: center;
 }
 
