change logo font

--- a/css/screen.css
+++ b/css/screen.css
@@ -88,7 +88,7 @@ ul.posts {
 }
 
 .yuin {
-  font-family: "bodedo-1","bodedo-2",sans-serif;
+  font-family: "steinzeit-1","steinzeit-2",fantasy;
   color: #FF4500;
 }
 
