change logo font

--- a/css/screen.css
+++ b/css/screen.css
@@ -89,7 +89,8 @@ ul.posts {
 
 .yuin {
   font-family: "steinzeit-1","steinzeit-2",fantasy;
-  color: #FF4500;
+  font-size: 1.5em;
+  color: #000000;
 }
 
 .title {
