--- a/css/screen.css
+++ b/css/screen.css
@@ -128,18 +128,25 @@ ul.posts {
   .site .footer {
     font-size: 80%;
     color: #666;
+/*
     border-top: 4px solid #eee;
-    margin-top: 2em;
+*/
+    margin-top: 1em;
     overflow: hidden;
   }
 
     .site .footer .contact {
       float: left;
       margin-right: 3em;
+	  line-height: 1.4em;
     }
 
       .site .footer .contact a {
         color: #8085C1;
+      }
+ 	  .site .footer .contact table td{
+        color: #8085C1;
+		width: 70px;
       }
 
     .site .footer .rss {
