--- a/css/screen.css
+++ b/css/screen.css
@@ -5,9 +5,6 @@
 /*****************************************************************************/
 
 /* Fonts */
-@font-face{ font-family: "gesta-1","gesta-2",sans-serif; }
-
-@font-face{ font-family: "cardo-1","cardo-2",serif; }
 
 /* Global Reset */
 
@@ -21,10 +18,10 @@ html, body {
 }
 
 body {
-  background-color: white;
-  font-family: "gesta-1","gesta-2",sans-serif;
-  font-size: 1em;
+  font-family: "Monaco", "helveltica", "San-serif";
+  font-size: 11px;
   text-align: center;
+  color: #4D4D4D;
 }
 
 
@@ -41,7 +38,8 @@ p {
 }
 
 a {
-  color: #00a;
+  color: #666666;
+  text-decoration: none;
 }
 
 a:hover {
@@ -49,12 +47,16 @@ a:hover {
 }
 
 a:visited {
-  color: #a0a;
+  color: #666666;
 }
 
 table {
   font-size: inherit;
   font: 100%;
+}
+
+ul, ol {
+	list-style-position: inside;
 }
 
 /*****************************************************************************/
@@ -63,24 +65,78 @@ table {
 /*
 /*****************************************************************************/
 
-#index{
+#index {
+	width: 570px;
+  padding: 12px;
+  margin-top: 60px;
+  background-color: #F2F2F2;
+}
+img {
+	max-width: 568px;
+}
+
+.category {
+  width: 570px;
+  padding: 12px 12px 1px 12px;
+  margin-top: 60px;
+}
+
+#tagPage {
+  background-color: #808080;
+  
+}
+
+#process {
+  background-color: #52DB8F;
+}
+
+#context {
+  background-color: #42DBF0;
+}
+
+#ideas {
+  background-color: #EDF55B;
+}
+
+.posts {
+/*  margin-bottom: 20px;*/
+}
+
+.post {
+  background-color: #ffffff;
+  padding: 12px;
+  margin-bottom: 12px;
+  color: #6F726F;
+}
+
+.post .titleBar {
+ 	border-bottom: 1px dashed #F7F7F7; 
+}
+	.titleBar .date {
+		float: right;
+		color: #D9D9D9;
+	}
+
+.post .content {
+	margin: 4px 4px 14px 4px;
+}
+
+.post .tags {
 
 }
 
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+	.post .tags .tag {
+		background-color: #CECECE;
+		color: #ffffff;
+		margin-right: 5px;
+		padding: 2px 6px;
+		float: left;
+		display: inline-block;
+	} 
+
+.post img {
+	max-width: 538px;
 }
-
-  ul.posts li {
-    line-height: 1.75em;
-  }
-
-  ul.posts span {
-    color: #aaa;
-    font-family: Monaco, "Courier New", monospace;
-    font-size: 80%;
-  }
 
 /*****************************************************************************/
 /*
@@ -89,69 +145,91 @@ ul.posts {
 /*****************************************************************************/
 
 .site {
-  font-size: 110%;
+/*  font-size: 1em;*/
   text-align: justify;
-  width: 40em;
-  margin: 2em auto 2em auto;
+  width: 800px;
+  margin: 0 auto 0px;
   line-height: 1.5em;
+	position: relative;
 }
 
-.yuin {
-  font-family: "Courier New", monospace;
-  font-size: 1.2em;
-  font-weight: bold;
-  color: #000000;
+#menuBg {
+	background-color: #fff;
+	opacity: 0.8;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 60px;
+	width: 100%;
+	display: block;
 }
 
-.yuin a {
-
-  color: #000000;
+#menu {
+  color: #4D4D4D;
+	padding-top: 30px;
+  padding-left: 6px;
+  font-size: 1.1em;
+	position: fixed;
+	top: 0;
+	height: 30px;
+	width: 100%;
 }
 
-
-.title {
-  color: #00a77e;
-  font-weight: bold;
-  margin-bottom: 2em;
+#menu .homeTitle{
+	margin-right: 30px;
+	margin-left: 4px;
 }
 
-  .site .title a {
-    color: #00a77e;
+  #menu .title a {
+    color: #4D4D4D;
     text-decoration: none;
+    margin-right: 10px;
   }
 
-  .site .title a:hover {
+  #menu .title a:hover {
     color: black;
   }
 
-  .site .title a.extra {
-    color: #aaa;
-    text-decoration: none;
-    margin-left: 1em;
-  }
+#sideBar {
+	background-color: #F2F2F2;
+	position: fixed;
+	top: 60px;
+	padding: 5px 10px 5px 10px;
+	width: 200px;
+	margin-left: 602px;
+}
 
-  .site .title a.extra:hover {
-    color: black;
-  }
+#sideBar #title {
+	border-bottom: 1px dashed #ffffff;
+	margin-bottom: 8px;
+}
+
+#sideBar .tag {
+  background-color: #CECECE;
+	color: #ffffff;
+	margin-right: 5px;
+	padding: 2px 6px;
+	margin-bottom: 5px;
+	float: left;
+	display: inline-block;
+}
+
 
   .site .meta {
     color: #aaa;
   }
 
   .site .footer {
-    font-size: 80%;
+    font-size: 0.9em;
     color: #666;
-/*
-    border-top: 4px solid #eee;
-*/
-    margin-top: 1em;
+    margin: 1em 1.2em;
     overflow: hidden;
   }
 
     .site .footer .contact {
       float: left;
       margin-right: 3em;
-	  line-height: 1.4em;
+  	  line-height: 1.2em;
     }
 
       .site .footer .contact a {
@@ -159,7 +237,8 @@ ul.posts {
       }
  	  .site .footer .contact table td{
         color: #8085C1;
-		width: 70px;
+				width: 70px;
+				height: 12px;
       }
 
     .site .footer .rss {
@@ -179,7 +258,8 @@ ul.posts {
 /*****************************************************************************/
 
 #post {
-
+  padding-top: 10px;
+  
 }
 
   /* standard */
@@ -225,3 +305,12 @@ ul.posts {
   #related h2 {
     margin-bottom: 1em;
   }
+
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
