--- a/css/screen.css
+++ b/css/screen.css
@@ -8,8 +8,8 @@ body {
   text-align: center;
   color: #4d4d4d;
 }
-body#homepage { background-color: #f7f7f7; }
-body#homepage #menuBg { background-color: #f7f7f7; }
+body#homepage { background-color: #f5f5f5; }
+body#homepage #menuBg { background-color: #f5f5f5; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
@@ -35,11 +35,11 @@ ul, ol { list-style-position: inside; }
   padding: 12px 12px 1px 12px;
   margin-top: 60px;
 }
-#tagPage { background-color: #808080; }
-#process { background-color: #52db8f; }
-#context { background-color: #42dbf0; }
-#ideas { background-color: #edf55b; }
-#manifesto { background-color: #ff623f; }
+#tagPage { background-color: rgba(128, 128, 128, 0.5); }
+#process { background-color: rgba(66, 219, 240, 0.5); }
+#context { background-color: rgba(237, 245, 91, 0.5); }
+#ideas { background-color: rgba(82, 219, 143, 0.5); }
+#manifesto { background-color: rgba(255, 98, 63, 0.5); }
 #manifesto .item {
   background-color: #ffffff;
   padding: 2px 4px 2px 8px;
@@ -47,12 +47,12 @@ ul, ol { list-style-position: inside; }
   list-style-type: none;
   display: inline-block;
 }
-#process_page .process_link a { color: #52db8f; }
-#menu .process_link a:hover { color: #52db8f; }
-#ideas_page .ideas_link a { color: #edf55b; }
-#menu .ideas_link a:hover { color: #edf55b; }
-#context_page .context_link a { color: #42dbf0; }
-#menu .context_link a:hover { color: #42dbf0; }
+#process_page .process_link a { color: #42dbf0; }
+#menu .process_link a:hover { color: #42dbf0; }
+#ideas_page .ideas_link a { color: #52db8f; }
+#menu .ideas_link a:hover { color: #52db8f; }
+#context_page .context_link a { color: #edf55b; }
+#menu .context_link a:hover { color: #edf55b; }
 #manifesto_page .manifesto_link a { color: #ff623f; }
 #menu .manifesto_link a:hover { color: #ff623f; }
 .post {
