change homepage img size

--- a/css/screen.css
+++ b/css/screen.css
@@ -29,10 +29,10 @@ ul, ol { list-style-position: inside; }
   margin-top: 60px;
   background-image: url('/white_alpha70.png');
 }
-#index img { max-width: 530px; }
+#index img { max-width: 566px; }
 .category {
   width: 570px;
-  padding: 12px 12px 1px 12px;
+  padding: 12px;
   margin-top: 60px;
 }
 #tagPage { background-color: rgba(128, 128, 128, 0.5); }
