--- a/css/screen.less
+++ b/css/screen.less
@@ -171,15 +171,18 @@ ul, ol {
   color: #6F726F;
 
 	.titleBar {
+	  font-weight: bold;
 	 	border-bottom: 1px dashed #F7F7F7;
 	
 		.date {
+			font-weight: normal;
 			float: right;
 			color: #D9D9D9;
 		}
 	}
 	
 	.content {
+		font-weight: normal;
 		margin: 4px 4px 14px 4px;
 	}
 	
@@ -206,7 +209,7 @@ ul, ol {
 
 .site {
   font-size: 1em;
-  text-align: justify;
+  text-align: left;
   width: 800px;
   margin: 0 auto 30px;
   line-height: 1.5em;
