--- a/css/screen.less
+++ b/css/screen.less
@@ -94,10 +94,20 @@ ul, ol {
 	width: @main_width;
   padding: @main_padding;
   margin-top: 60px;
-	background-image: @img_alpha70;
+/*  background-image: @img_alpha70; */
+	background-color: #f0f0f0;
 	
 	img {
 		max-width: 566px;
+	}
+	
+	.description{
+
+		background-color: #c5c5c5;
+		padding: 0px 0px 0px 12px;
+		margin-bottom: 0px;
+		margin-top: 8px;
+		display: inline-block;
 	}
 }
 
