add new ideas for dirty word project

--- a/css/screen.css
+++ b/css/screen.css
@@ -27,7 +27,7 @@ ul, ol { list-style-position: inside; }
   width: 570px;
   padding: 12px;
   margin-top: 60px;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
 }
 #index img { max-width: 566px; }
 #index .description {
