--- a/css/screen.less
+++ b/css/screen.less
@@ -95,7 +95,8 @@ ul, ol {
   padding: @main_padding;
   margin-top: 60px;
 /*  background-image: @img_alpha70; */
-	background-color: #f0f0f0;
+	/*background-color: #f0f0f0;*/
+	background-color: #ffffff;
 	
 	img {
 		max-width: 566px;
