--- a/css/screen.css
+++ b/css/screen.css
@@ -31,9 +31,9 @@ ul, ol { list-style-position: inside; }
 }
 #index img { max-width: 590px; }
 #index .description {
-  background-color: #c5c5c5;
-  padding: 6px 6px 6px 8px;
-  margin-bottom: 0px;
+  background-color: #eeeeee;
+  padding: 6px 10px 6px 10px;
+  margin-bottom: 8px;
   margin-top: 8px;
   display: inline-block;
 }
