--- a/css/screen.less
+++ b/css/screen.less
@@ -106,9 +106,9 @@ ul, ol {
 	
 	.description{
 
-		background-color: #c5c5c5;
-		padding: 6px 6px 6px 8px;
-		margin-bottom: 0px;
+		background-color: #eee;
+		padding: 6px 10px 6px 10px;
+		margin-bottom: 8px;
 		margin-top: 8px;
 		display: inline-block;
 	}
