--- a/css/screen.less.css
+++ b/css/screen.less.css
@@ -32,7 +32,8 @@ html, body {
 }
 
 body {
-  font-family: "Monaco", "helveltica", "San-serif";
+/*  font-family: "Monaco", "helveltica", "San-serif";*/
+	font-family: 'Inconsolata', arial, serif;
   font-size: 11px;
   text-align: center;
   color: #4D4D4D;
