--- a/css/screen.css
+++ b/css/screen.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 body {
-  font-family: "Monaco", "helveltica", "San-serif";
-  font-size: 11px;
+  font-family: 'Inconsolata', arial, serif;
+  font-size: 15px;
   text-align: center;
   color: #4d4d4d;
 }
