--- a/css/screen.less
+++ b/css/screen.less
@@ -41,8 +41,9 @@
 }
 
 body {
-  font-family: "Monaco", "helveltica", "San-serif";
-  font-size: 11px;
+/*  font-family: "Monaco", "helveltica", "San-serif";*/
+	font-family: 'Inconsolata', arial, serif;
+  font-size: 13px;
   text-align: center;
   color: #4D4D4D;
 }
