--- a/css/screen.css
+++ b/css/screen.css
@@ -4,12 +4,12 @@
 }
 body {
   font-family: 'Inconsolata', arial, serif;
-  font-size: 15px;
+  font-size: 13px;
   text-align: center;
   color: #4d4d4d;
 }
-body#homepage { background-color: #f9f9f9; }
-body#homepage #menuBg { background-color: #f9f9f9; }
+body#homepage { background-color: #ffffff; }
+body#homepage #menuBg { background-color: #ffffff; }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
@@ -43,12 +43,12 @@ ul, ol { list-style-position: inside; }
   padding: 12px 12px 1px 12px;
   margin-bottom: 20px;
 }
-#process .post_container { background-color: rgba(66, 219, 240, 0.5); }
-#context .post_container { background-color: rgba(237, 245, 91, 0.5); }
-#ideas .post_container { background-color: rgba(82, 219, 143, 0.5); }
-#collection .post_container { background-color: rgba(184, 215, 194, 0.5); }
-#tagPage .post_container { background-color: rgba(128, 128, 128, 0.3); }
-#manifesto .post_container { background-color: rgba(255, 98, 63, 0.5); }
+#process .post_container { background-color: rgba(255, 255, 255, 0.5); }
+#context .post_container { background-color: rgba(255, 255, 255, 0.5); }
+#ideas .post_container { background-color: rgba(255, 255, 255, 0.5); }
+#collection .post_container { background-color: rgba(255, 255, 255, 0.5); }
+#tagPage .post_container { background-color: rgba(255, 255, 255, 0.5); }
+#manifesto .post_container { background-color: rgba(255, 255, 255, 0.5); }
 #manifesto .post_container .item {
   background-color: #ffffff;
   padding: 2px 4px 2px 8px;
@@ -56,7 +56,7 @@ ul, ol { list-style-position: inside; }
   list-style-type: none;
   display: inline-block;
 }
-#guideline { background-color: rgba(125, 123, 186, 0.5); }
+#guideline { background-color: rgba(255, 255, 255, 0.5); }
 #process_page .process_link a { color: #42dbf0; }
 #menu .process_link a:hover { color: #42dbf0; }
 #ideas_page .ideas_link a { color: #52db8f; }
@@ -71,13 +71,12 @@ ul, ol { list-style-position: inside; }
 #menu .guideline_link a:hover { color: #7d7bba; }
 .post {
   background-color: #ffffff;
-  padding: 12px;
   margin-bottom: 12px;
   color: #6f726f;
 }
 .post .titleBar {
   font-weight: bold;
-  border-bottom: 1px dashed #f7f7f7;
+  border-bottom: 1px dashed #e0e0e0;
 }
 .post .titleBar .date {
   font-weight: normal;
@@ -89,10 +88,10 @@ ul, ol { list-style-position: inside; }
   margin: 4px 4px 14px 4px;
 }
 .post .tags .tag {
-  background-color: #cecece;
+  background-color: #f5f5f5;
   color: #ffffff;
   margin-right: 5px;
-  padding: 2px 6px;
+  padding: 1px 5px;
   float: left;
   display: inline-block;
 }
@@ -141,21 +140,20 @@ ul, ol { list-style-position: inside; }
 }
 #sideBar .section {
   font-size: 0.8em;
-  background-color: #f2f2f2;
   display: inline-block;
   padding: 5px 10px 5px 10px;
   width: 100%;
   margin-bottom: 8px;
 }
 #sideBar .title {
-  border-bottom: 1px dashed #ffffff;
+  border-bottom: 1px dashed #e0e0e0;
   margin-bottom: 8px;
 }
 #sideBar .tag {
-  background-color: #cecece;
+  background-color: #f5f5f5;
   color: #ffffff;
   margin-right: 5px;
-  padding: 2px 6px;
+  padding: 1px 5px;
   margin-bottom: 5px;
   float: left;
   display: inline-block;
