--- a/css/screen.less
+++ b/css/screen.less
@@ -13,13 +13,22 @@
 @guideline_color: 			rgb(125,123,186);
 @homepage_color: 				rgb(249,249,249);
 
-@tag_color_alpha: 			 rgba(128,128,128,0.3);
+@tag_color_alpha: 			 rgba(255,255,255,0.5);
+@process_color_alpha: 	 rgba(255,255,255,0.5);
+@context_color_alpha: 	 rgba(255,255,255,0.5);
+@ideas_color_alpha: 		 rgba(255,255,255,0.5);
+@collection_color_alpha: rgba(255,255,255,0.5);
+@manifesto_color_alpha:  rgba(255,255,255,0.5);
+@guideline_color_alpha:  rgba(255,255,255,0.5);
+
+/*@tag_color_alpha: 			 rgba(128,128,128,0.3);
 @process_color_alpha: 	 rgba(66, 219, 240,0.5);
 @context_color_alpha: 	 rgba(237, 245, 91,0.5);
 @ideas_color_alpha: 		 rgba(82, 219, 143,0.5);
 @collection_color_alpha: rgba(184,215,194,0.5);
 @manifesto_color_alpha:  rgba(255, 98, 63,0.5);
-@guideline_color_alpha:  rgba(125, 123, 186,0.5);
+@guideline_color_alpha:  rgba(125, 123, 186,0.5);*/
+
 
 @img_alpha70: url('/white_alpha70.png');
 
@@ -49,10 +58,10 @@ body {
 }
 
 body#homepage {
-	background-color: @homepage_color;
+	background-color: #fff;//@homepage_color;
 	
 	#menuBg {
-		background-color: @homepage_color;
+		background-color: #fff;//@homepage_color;
 	}
 }
 
@@ -126,6 +135,7 @@ ul, ol {
   width: @main_width;
   padding: @main_padding @main_padding 1px @main_padding;
   margin-bottom: 20px;
+/*	border-bottom: 1px dashed #e0e0e0;*/
 }
 
 #process .post_container {
@@ -213,13 +223,13 @@ ul, ol {
 
 .post {
   background-color: #ffffff;
-  padding: 12px;
+/*  padding: 12px;*/
   margin-bottom: 12px;
   color: #6F726F;
 
 	.titleBar {
 	  font-weight: bold;
-	 	border-bottom: 1px dashed #F7F7F7;
+	 	border-bottom: 1px dashed #e0e0e0;
 	
 		.date {
 			font-weight: normal;
@@ -234,10 +244,10 @@ ul, ol {
 	}
 	
 	.tags .tag {
-		background-color: #CECECE;
+		background-color: #f5f5f5;
 		color: #ffffff;
 		margin-right: 5px;
-		padding: 2px 6px;
+		padding: 1px 5px;
 		float: left;
 		display: inline-block;
 	}
@@ -304,7 +314,7 @@ ul, ol {
 	
 	.section {
 		font-size: 0.8em;
-		background-color: #F2F2F2;
+/*		background-color: #F2F2F2;*/
 		display: inline-block;
 		padding: 5px 10px 5px 10px;
 		width: 100%;
@@ -312,15 +322,15 @@ ul, ol {
 	}
 	
 	.title {
-		border-bottom: 1px dashed #ffffff;
+		border-bottom: 1px dashed #e0e0e0;
 		margin-bottom: 8px;
 	}
 	
 	.tag {
-	  background-color: #CECECE;
+	  background-color: #f5f5f5;
 		color: #ffffff;
 		margin-right: 5px;
-		padding: 2px 6px;
+		padding: 1px 5px;
 		margin-bottom: 5px;
 		float: left;
 		display: inline-block;
