fix padding for pages

--- a/css/screen.less
+++ b/css/screen.less
@@ -133,7 +133,8 @@ ul, ol {
 
 .post_container {
   width: @main_width;
-  padding: @main_padding @main_padding 1px @main_padding;
+	padding: 5px 12px 1px 12px;
+/*  padding: @main_padding @main_padding 1px @main_padding;*/
   margin-bottom: 20px;
 /*	border-bottom: 1px dashed #e0e0e0;*/
 }
