--- a/css/screen.less
+++ b/css/screen.less
@@ -135,12 +135,12 @@ ul, ol {
 /*  margin-top: 20px;*/
 	top: @global_padding_top;
 	position: absolute;
-	left:140px;
+	left:165px;
 }
 
 .post_container {
-  width: @main_width;
-	padding: 0 12px 1px 12px;
+  width: 560px;
+/*	padding: 0 12px 1px 12px;*/
 /*  padding: @main_padding @main_padding 1px @main_padding;*/
   margin-bottom: 20px;
 /*	border-bottom: 1px dashed #e0e0e0;*/
@@ -250,7 +250,6 @@ ul, ol {
 	
 	.content {
 		font-weight: normal;
-		margin: 4px 4px 14px 4px;
 	}
 	
 	.tags .tag {
@@ -321,7 +320,7 @@ ul, ol {
 	top: 40px;
 	width: 235px;
 /*	margin-left: @main_width + 34px;*/
-	margin-left: 760px;
+	margin-left: 750px;
 	font-size: 1.1em;
 	
 	.section {
