--- a/css/screen.css
+++ b/css/screen.css
@@ -41,11 +41,10 @@ ul, ol { list-style-position: inside; }
 .category {
   top: 40px;
   position: absolute;
-  left: 140px;
+  left: 165px;
 }
 .post_container {
-  width: 590px;
-  padding: 0 12px 1px 12px;
+  width: 560px;
   margin-bottom: 20px;
 }
 #process .post_container { background-color: rgba(255, 255, 255, 0.5); }
@@ -91,10 +90,7 @@ ul, ol { list-style-position: inside; }
   float: right;
   color: #d9d9d9;
 }
-.post .content {
-  font-weight: normal;
-  margin: 4px 4px 14px 4px;
-}
+.post .content { font-weight: normal; }
 .post .tags .tag {
   font-family: 'Inconsolata', arial, serif;
   background-color: #f5f5f5;
@@ -144,7 +140,7 @@ ul, ol { list-style-position: inside; }
   position: fixed;
   top: 40px;
   width: 235px;
-  margin-left: 760px;
+  margin-left: 750px;
   font-size: 1.1em;
 }
 #sideBar .section {
